PRAGMA foreign_keys = ON;

/** agency **/
CREATE TABLE agency (
    year                    int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    authority_num           varchar(6) CHECK(year < 2024
                                       OR authority_num IS NOT NULL)           ,
    home_rule_ind           boolean                                    NOT NULL,
    agg_ext_base_year       int      CHECK(agg_ext_base_year >= 2003)          ,
    lim_numerator           bigint   CHECK(lim_numerator >= 0)                 ,
    lim_denominator         bigint   CHECK(lim_denominator >= 0)               ,
    lim_rate                double   CHECK(lim_rate >= 0)                      ,
    prior_eav               bigint   CHECK((prior_eav >= 0)
                                   AND (year >= 2024 OR prior_eav IS NOT NULL)),
    curr_new_prop           bigint                                     NOT NULL,
    cty_cook_eav            bigint   CHECK(cty_cook_eav >= 0)          NOT NULL,
    cty_overlap_eav         bigint   CHECK(cty_overlap_eav >= 0)       NOT NULL,
    cty_total_eav           bigint   CHECK(cty_total_eav >= 0)         NOT NULL,
    pct_burden              double   CHECK((pct_burden >= 0
                                     AND   pct_burden <= 1)
                                  AND (year >= 2024 OR pct_burden IS NOT NULL)),
    total_levy              bigint   CHECK(total_levy >= 0)            NOT NULL,
    total_max_levy          bigint   CHECK(total_max_levy >= 0)        NOT NULL,
    total_prelim_rate       double   CHECK(total_prelim_rate >= 0)     NOT NULL,
    total_final_levy        bigint   CHECK(total_final_levy >= 0)      NOT NULL,
    total_final_rate        double   CHECK(total_final_rate >= 0)      NOT NULL,
    reduction_pct           double   CHECK(reduction_pct >= 0
                                     AND   reduction_pct <= 1)                 ,
    total_non_cap_ext       double   CHECK(total_non_cap_ext >= 0)             ,
    total_ext               double   CHECK(total_ext >= 0)             NOT NULL,

    PRIMARY KEY (year, agency_num)
) WITHOUT ROWID;

CREATE INDEX ix_agency_year ON agency(year);
CREATE INDEX ix_agency_agency_num ON agency(agency_num);
CREATE INDEX ix_agency_home_rule_ind ON agency(home_rule_ind);


/** agency_info **/
CREATE TABLE agency_info (
    agency_num              varchar(9)                                 NOT NULL,
    agency_name             varchar                                    NOT NULL,
    agency_name_short       varchar                                    NOT NULL,
    agency_name_original    varchar                                    NOT NULL,
    major_type              varchar(21)                                NOT NULL,
    minor_type              varchar(10)                                NOT NULL,
    PRIMARY KEY (agency_num)
) WITHOUT ROWID;

CREATE INDEX ix_agency_info_major_type ON agency_info(major_type);
CREATE INDEX ix_agency_info_minor_type ON agency_info(minor_type);


/** agency_crosswalk **/
CREATE TABLE agency_crosswalk (
    year_of_change          int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    agency_num_final        varchar(9)                                 NOT NULL,
    PRIMARY KEY (agency_num)
) WITHOUT ROWID;


/** agency_fund **/
CREATE TABLE agency_fund (
    year                    int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    fund_num                varchar(3)                                 NOT NULL,
    levy                    bigint   CHECK(levy >= 0)                  NOT NULL,
    loss_pct                double   CHECK(loss_pct >= 0
                                     AND   loss_pct <= 1)              NOT NULL,
    levy_plus_loss          bigint   CHECK(levy_plus_loss >= 0)        NOT NULL,
    rate_ceiling            double   CHECK(rate_ceiling >= 0)          NOT NULL,
    max_levy                bigint   CHECK(max_levy >= 0)              NOT NULL,
    prelim_rate             double   CHECK(prelim_rate >= 0)           NOT NULL,
    ptell_reduced_levy      bigint   CHECK(ptell_reduced_levy >= 0)            ,
    final_levy              bigint   CHECK(final_levy >= 0)            NOT NULL,
    final_rate              double   CHECK(final_rate >= 0)            NOT NULL,
    PRIMARY KEY (year, agency_num, fund_num),
    FOREIGN KEY (year, agency_num) REFERENCES agency(year, agency_num)
) WITHOUT ROWID;

CREATE INDEX ix_agency_fund_year ON agency_fund(year);
CREATE INDEX ix_agency_fund_agency_num ON agency_fund(agency_num);
CREATE INDEX ix_agency_fund_fund_num ON agency_fund(fund_num);


/** agency_fund_info **/
CREATE TABLE agency_fund_info (
    agency_num              varchar(9)                                 NOT NULL,
    fund_type_num           varchar(3)                                 NOT NULL,
    fund_type_name          varchar                                    NOT NULL,
    fund_num                varchar(6)                                 NOT NULL,
    fund_name               varchar                                    NOT NULL,
    capped_ind              boolean                                    NOT NULL,
    PRIMARY KEY (agency_num, fund_num)
) WITHOUT ROWID;

CREATE INDEX ix_agency_fund_info_capped_ind ON agency_fund_info(capped_ind);


/** agency_fund_crosswalk **/
CREATE TABLE agency_fund_crosswalk (
    year_of_change          int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    agency_num_final        varchar(9)                                 NOT NULL,
    fund_num                varchar(6)                                 NOT NULL,
    fund_num_final          varchar(6)                                 NOT NULL,
    PRIMARY KEY (agency_num, fund_num)
) WITHOUT ROWID;


/** cpi **/
CREATE TABLE cpi (
    year                    int                                        NOT NULL,
    cpi                     double                                     NOT NULL,
    ptell_cook              double                                     NOT NULL,
    levy_year               int                                        NOT NULL,
    PRIMARY KEY (levy_year)
) WITHOUT ROWID;

CREATE INDEX ix_cpi_year ON cpi(year);


/** eq_factor **/
CREATE TABLE eq_factor (
    year                    int                                        NOT NULL,
    eq_factor_tentative     double                                     NOT NULL,
    eq_factor_final         double                                     NOT NULL,
    PRIMARY KEY (year)
) WITHOUT ROWID;

CREATE INDEX ix_eq_factor_year ON eq_factor(year);


/** metadata **/
CREATE TABLE metadata (
    db_version              varchar                                    NOT NULL,
    requires_pkg_version    varchar                                    NOT NULL,
    created_with_pkg_version  varchar                                  NOT NULL,
    created_at              varchar                                    NOT NULL,
    created_by              varchar                                    NOT NULL,
    author_name             varchar                                    NOT NULL,
    author_email            varchar                                    NOT NULL,
    source_url_database     varchar                                    NOT NULL,
    source_url_package      varchar                                    NOT NULL,
    data_year_min           int                                        NOT NULl,
    data_year_max           int                                        NOT NULL
);


/** pin **/
CREATE TABLE pin (
    year                    int                                        NOT NULL,
    pin                     varchar(14)                                NOT NULL,
    class                   varchar(3)                                 NOT NULL,
    tax_code_num            varchar(5)                                 NOT NULL,
    tax_bill_total          double   CHECK(tax_bill_total >= 0)        NOT NULL,
    av_mailed               int   CHECK(av_mailed >= 0)                NOT NULL,
    av_certified            int   CHECK(av_certified >= 0)             NOT NULL,
    av_board                int   CHECK(av_board >= 0)                 NOT NULL,
    av_clerk                int   CHECK(av_clerk >= 0)                 NOT NULL,
    exe_homeowner           int   CHECK(exe_homeowner >= 0)            NOT NULL,
    exe_senior              int   CHECK(exe_senior >= 0)               NOT NULL,
    exe_freeze              int   CHECK(exe_freeze >= 0)               NOT NULL,
    exe_longtime_homeowner  int   CHECK(exe_longtime_homeowner >= 0)   NOT NULL,
    exe_disabled            int   CHECK(exe_disabled >= 0)             NOT NULL,
    exe_vet_returning       int   CHECK(exe_vet_returning >= 0)        NOT NULL,
    exe_vet_dis_lt50        int   CHECK(exe_vet_dis_lt50 >= 0)         NOT NULL,
    exe_vet_dis_50_69       int   CHECK(exe_vet_dis_50_69 >= 0)        NOT NULL,
    exe_vet_dis_ge70        int   CHECK(exe_vet_dis_ge70 >= 0)         NOT NULL,
    exe_vet_dis_100         int   CHECK(exe_vet_dis_100 >= 0)          NOT NULL,
    exe_wwii                int   CHECK(exe_wwii >= 0)                 NOT NULL,
    exe_abate               int   CHECK(exe_abate >= 0)                NOT NULL,
    PRIMARY KEY (year, pin)
) WITHOUT ROWID;

CREATE INDEX ix_pin_year ON pin(year);
CREATE INDEX ix_pin_pin ON pin(pin);
CREATE INDEX ix_pin_tax_code_num ON pin(tax_code_num);
CREATE INDEX ix_pin_year_tax_code_num ON pin(year, tax_code_num);
CREATE INDEX ix_pin_pin_tax_code_num ON pin(pin, tax_code_num);
CREATE INDEX ix_pin_township_code ON pin(substr(tax_code_num, 1, 2));
CREATE INDEX ix_pin_class ON pin(class);


/** tax_code **/
CREATE TABLE tax_code (
    year                    int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    agency_rate             double   CHECK(agency_rate >= 0)           NOT NULL,
    tax_code_num            varchar(5)                                 NOT NULL,
    tax_code_rate           double   CHECK(tax_code_rate >= 0)         NOT NULL,
    PRIMARY KEY (year, agency_num, tax_code_num)
) WITHOUT ROWID;

CREATE INDEX ix_tax_code_year ON tax_code(year);
CREATE INDEX ix_tax_code_agency_num ON tax_code(agency_num);
CREATE INDEX ix_tax_code_tax_code_num ON tax_code(tax_code_num);
CREATE INDEX ix_tax_code_year_agency_num ON tax_code(year, agency_num);
CREATE INDEX ix_tax_code_year_tax_code_num ON tax_code(year, tax_code_num);


/** tif **/
CREATE TABLE tif (
    year                    int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    prev_year_revenue       double   CHECK(prev_year_revenue >= 0)     NOT NULL,
    curr_year_revenue       double   CHECK(curr_year_revenue >= 0)     NOT NULL,
    first_year              int                                        NOT NULL,
    cancelled_this_year     boolean                                    NOT NULL,
    PRIMARY KEY (year, agency_num)
) WITHOUT ROWID;

CREATE INDEX ix_tif_year ON tif(year);
CREATE INDEX ix_tif_agency_num ON tif(agency_num);


/** tif_crosswalk **/
CREATE TABLE tif_crosswalk (
    year                    int                                        NOT NULL,
    agency_num_dist         varchar(9)                                 NOT NULL,
    agency_num_final        varchar(9)                                 NOT NULL,
    PRIMARY KEY (year, agency_num_dist)
    FOREIGN KEY (year, agency_num_final) REFERENCES tif(year, agency_num)
) WITHOUT ROWID;

CREATE INDEX ix_tif_crosswalk_year ON tif_crosswalk(year);
CREATE INDEX ix_tif_crosswalk_agency_num_dist ON tif_crosswalk(agency_num_dist);
CREATE INDEX ix_tif_crosswalk_agency_num_final
    ON tif_crosswalk(agency_num_final);


/** tif_distribution **/
CREATE TABLE tif_distribution (
    year                    int                                        NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    tax_code_num            varchar(5)                                 NOT NULL,
    tax_code_rate           double   CHECK(tax_code_rate >= 0)         NOT NULL,
    tax_code_eav            bigint   CHECK(tax_code_eav >= 0)          NOT NULL,
    tax_code_frozen_eav     bigint   CHECK(tax_code_frozen_eav >= 0)   NOT NULL,
    tax_code_revenue        bigint   CHECK(tax_code_revenue >= 0)      NOT NULL,
    tax_code_distribution_pct double CHECK((tax_code_distribution_pct >= 0)
                                     AND (year >= 2024
                                     OR tax_code_distribution_pct IS NOT NULL)),

    PRIMARY KEY (year, agency_num, tax_code_num)
    FOREIGN KEY (year, agency_num) REFERENCES tif_crosswalk(year, agency_num_dist)
) WITHOUT ROWID;

CREATE INDEX ix_tif_distribution_year ON tif_distribution(year);
CREATE INDEX ix_tif_distribution_agency_num ON tif_distribution(agency_num);
CREATE INDEX ix_tif_distribution_tax_code_num ON tif_distribution(tax_code_num);
CREATE INDEX ix_tif_distribution_year_agency_num
    ON tif_distribution(year, agency_num);
CREATE INDEX ix_tif_distribution_year_tax_code_num
    ON tif_distribution(year, tax_code_num);

/** pin_tif_distribution **/
CREATE TABLE pin_tif_distribution (
    year                    int                                        NOT NULL,
    pin                     varchar(14)                                NOT NULL,
    agency_num              varchar(9)                                 NOT NULL,
    tax_code_num            varchar(5)                                 NOT NULL,
    tax_code_rate           double   CHECK(tax_code_rate >= 0)         NOT NULL,
    pin_eav                 int      CHECK(pin_eav >= 0)               NOT NULL,
    pin_frozen_eav          int      CHECK(pin_frozen_eav >= 0)        NOT NULL,
    pin_revenue             double   CHECK(pin_revenue >= 0)           NOT NULL,
    pin_increment_eav       int      CHECK(pin_increment_eav >= 0)     NOT NULL,
    pin_distribution_pct    double   CHECK(pin_distribution_pct >= 0)  NOT NULL,
    transit_tif_to_cps      double   CHECK(transit_tif_to_cps >= 0)            ,
    transit_tif_to_tif      double   CHECK(transit_tif_to_tif >= 0)            ,
    transit_tif_to_dist     double   CHECK(transit_tif_to_dist >= 0)           ,
    is_transit_tif          boolean                                    NOT NULL,
    PRIMARY KEY (year, pin, agency_num)
    FOREIGN KEY (year, agency_num) REFERENCES tif_crosswalk(year, agency_num_dist)
) WITHOUT ROWID;

CREATE INDEX ix_pin_tif_distribution_year ON pin_tif_distribution(year);
CREATE INDEX ix_pin_tif_distribution_agency_num ON pin_tif_distribution(agency_num);
CREATE INDEX ix_pin_tif_distribution_tax_code_num ON pin_tif_distribution(tax_code_num);
CREATE INDEX ix_pin_tif_distribution_year_agency_num
    ON pin_tif_distribution(year, agency_num);
CREATE INDEX ix_pin_tif_distribution_year_tax_code_num
    ON pin_tif_distribution(year, tax_code_num);
