erDiagram

  agency {
    int     year              PK
    varchar agency_num        PK
    varchar authority_num
    boolean home_rule_ind
    int     agg_ext_base_year
    bigint  lim_numerator
    bigint  lim_denominator
    double  lim_rate
    bigint  prior_eav
    bigint  curr_new_prop
    bigint  cty_cook_eav
    bigint  cty_overlap_eav
    bigint  cty_total_eav
    double  pct_burden
    bigint  total_levy
    bigint  total_max_levy
    double  total_prelim_rate
    bigint  total_final_levy
    double  total_final_rate
    double  reduction_pct
    double  total_non_cap_ext
    double  total_ext
  }

  agency_info {
    varchar agency_num         PK
    varchar agency_name
    varchar agency_name_short
    varchar agency_name_original
    varchar major_type
    varchar minor_type
  }

  agency_crosswalk {
    int     year_of_change
    varchar agency_num         PK
    varchar agency_num_final
  }

  agency_fund {
    int     year               PK
    varchar agency_num         PK
    varchar fund_num           PK
    bigint  levy
    double  loss_pct
    bigint  levy_plus_loss
    double  rate_ceiling
    bigint  max_levy
    double  prelim_rate
    bigint  ptell_reduced_levy
    bigint  final_levy
    double  final_rate
  }

  agency_fund_info {
    varchar agency_num         PK
    varchar fund_type_num
    varchar fund_type_name
    varchar fund_num           PK
    varchar fund_name
    boolean capped_ind
  }

  agency_fund_crosswalk {
    int     year_of_change
    varchar agency_num         PK
    varchar agency_num_final
    varchar fund_num           PK
    varchar fund_num_final
  }

  cpi {
    int     year
    double  cpi
    double  ptell_cook
    int     levy_year          PK
  }

  eq_factor {
    int     year               PK
    double  eq_factor_tentative
    double  eq_factor_final
  }

  metadata {
    varchar db_version
    varchar requires_pkg_version
    varchar created_with_pkg_version
    varchar created_at
    varchar created_by
    varchar author_name
    varchar author_email
    varchar source_url_database
    varchar source_url_package
    int     data_year_min
    int     data_year_max
  }

  pin {
    int     year               PK
    varchar pin                PK
    varchar class
    varchar tax_code_num
    double  tax_bill_total
    int     av_mailed
    int     av_certified
    int     av_board
    int     av_clerk
    int     exe_homeowner
    int     exe_senior
    int     exe_freeze
    int     exe_longtime_homeowner
    int     exe_disabled
    int     exe_vet_returning
    int     exe_vet_dis_lt50
    int     exe_vet_dis_50_69
    int     exe_vet_dis_ge70
    int     exe_vet_dis_100
    int     exe_wwii
    int     exe_abate
  }

  pin_geometry {
    int     year
    varchar pin10
    double  longitude
    double  latitude
    text    geometry
  }

  pin_geometry_raw {
    varchar pin10              PK
    int     start_year         PK
    int     end_year           PK
    double  longitude
    double  latitude
    text    geometry
  }

  tax_code {
    int     year               PK
    varchar agency_num         PK
    double  agency_rate
    varchar tax_code_num       PK
    double  tax_code_rate
  }

  tif {
    int     year               PK
    varchar agency_num         PK
    double  prev_year_revenue
    double  curr_year_revenue
    int     first_year
    boolean cancelled_this_year
  }

  tif_crosswalk {
    int     year
    varchar agency_num_dist
    varchar agency_num_final
  }

  tif_distribution {
    int     year               PK
    varchar agency_num         PK
    varchar tax_code_num       PK
    double  tax_code_rate
    bigint  tax_code_eav
    bigint  tax_code_frozen_eav
    bigint  tax_code_revenue
    double  tax_code_distribution_pct
  }

  pin_tif_distribution {
    int     year               PK
    varchar pin                PK
    varchar agency_num         PK
    varchar tax_code_num
    double  tax_code_rate
    int     pin_eav
    int     pin_frozen_eav
    double  pin_revenue
    int     pin_increment_eav
    double  pin_distribution_pct
    double  transit_tif_to_cps
    double  transit_tif_to_tif
    double  transit_tif_to_dist
    boolean is_transit_tif
  }

  eq_factor ||--|{ pin : "applies to"
  pin ||--|{ tax_code : "within"
  pin ||--o| pin_tif_distribution : "may have"
  cpi ||--|{ agency : "applies to"
  tax_code }|--|| agency : "has"
  tax_code ||--o| tif_distribution : "may have"
  agency ||--|{ agency_fund : "contains"
  agency ||--o| agency_crosswalk : "may have"
  agency_info ||--|{ agency : "describes"
  agency_fund ||--o| agency_fund_crosswalk : "may have"
  agency_fund_info ||--|{ agency_fund : "describes"
  tif ||--|| tif_crosswalk : "in"
  tif_distribution }|--|| tif_crosswalk : "in"
  pin_tif_distribution }|--|| tif_crosswalk : "in"
  agency_info ||--o{ tif: "describes"
  tax_code }|--o| tif : "may have"
  pin_geometry ||--o| pin : "has"
  pin_geometry }|--|| pin_geometry_raw : "expands"
